--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Navbar from '../components/Navbar.astro'
+import Sleider from '../components/Sleider.astro'
 ---
 
 <!doctype html>
@@ -14,6 +15,7 @@ import Navbar from '../components/Navbar.astro'
 	<body>
 		<Navbar />
 		<slot />
+		<Sleider busqueda="barra"/>
 	</body>
 </html>
 
@@ -26,4 +28,5 @@ import Navbar from '../components/Navbar.astro'
 		height: 100%;
 		min-height: 100vh;
 	}
+
 </style>
